# images_api

./: Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py  pytest.ini
src/config/: database.py
src/models/: base.py  group.py  image.py
src/routers/: __init__.py  dependencies.py  group_router.py  image_router.py
src/schemas/: base.py  group.py  image.py
src/services/: base.py  group_service.py  image_service.py
src/tests/: conftest.py
src/tests/api/: test_get_groups.py  test_update_image.py
src/tests/fixtures/: groups.json  images.json
